# HESEA_Lib

./: .gitignore  CMakeLists.User.txt  CMakeLists.txt  HESeaConfig.cmake.in  HESeaConfigVersion.cmake.in  LICENSE  Makefile  README.md  Security.md  lbcrypto-doxy-config
benchmark/: CMakeLists.txt
benchmark/src/: Encoding.cpp  IntegerMath.cpp  Lattice.cpp  NbTheory.cpp  README.md  VectorMath.cpp  basic_test.cpp  binfhe-ap.cpp  binfhe-ginx.cpp  compare-bfvrns-vs-bfvrnsB.cpp  compare-bfvrns-vs-bgvrns.cpp  lib-benchmark.cpp  lib-hexl-benchmark.cpp  lib-hexl-util.h  poly-benchmark-16k.cpp  poly-benchmark-1k.cpp  poly-benchmark-4k.cpp  poly-benchmark-64k.cpp  poly-hexl-benchmark-16k.cpp  poly-hexl-benchmark-4k.cpp  serialize-ckks.cpp  vechelper.h
doc/: Instructions-for-building-HESEA-in-Linux.md  Instructions-for-building-HESEA-in-Windows.md  Instructions-for-building-HESEA-in-macOS.md  Instructions-for-building-user-projects-that-use-HESEA.md  Use-of-CMake-in-HESEA.md
src/core/: CMakeLists.txt
src/core/examples/: parallel.cpp  sampling.cpp
src/core/extras/: dft.cpp  math.cpp  ntt1.cpp  ntt2.cpp  temp-ntt.cpp  temp-prng.cpp  temp-xvector.cpp
src/core/include/: heseacore.h  testdefs.h  version.h
src/core/include/encoding/: ckkspackedencoding.h  coefpackedencoding.h  encodingparams.h  encodings.h  packedencoding.h  plaintext.h  plaintextfactory.h  stringencoding.h
src/core/include/lattice/: README.md  backend.h  dcrtpoly.h  dgsampling.h  elemparamfactory.h  elemparams.h  field2n.h  ildcrtparams.h  ilelement.h  ilparams.h  poly.h  stdlatticeparms.h  trapdoor.h  trapdoorparameters.h
src/core/include/math/: README.md  SAMPLING_README.md  backend.h  binaryuniformgenerator.h  dftransfrm.h  discretegaussiangenerator.h  discretegaussiangeneratorgeneric.h  discreteuniformgenerator.h  distrgen.h  distributiongenerator.h  interface.h  matrix.h  matrixstrassen.h  nbtheory.h  ternaryuniformgenerator.h  transfrm.h
src/core/include/math/bigintdyn/: mubintvecdyn.h  ubintdyn.h
src/core/include/math/bigintfxd/: mubintvecfxd.h  ubintfxd.h
src/core/include/math/bigintnat/: mubintvecnat.h  ubintnat.h
src/core/include/math/bigintntl/: mubintvecntl.h  ubintntl.h
src/core/include/utils/: caller_info.h  debug.h  defines.h  exception.h  hashutil.h  inttypes.h  memory.h  palisadebase64.h  parallel.h  parmfactory.h  serial.h  serializable.h  serialize-binary.h  serialize-json.h  sertype.h  testcasegen.h  utilities.h
src/core/include/utils/prng/: blake2engine.h
src/core/lib/encoding/: ckkspackedencoding.cpp  coefpackedencoding.cpp  encodingparams.cpp  packedencoding.cpp  plaintextfactory.cpp  stringencoding.cpp
src/core/lib/lattice/: be2-poly-impl.cpp  be4-poly-impl.cpp  be6-poly-impl.cpp  benative-poly-impl.cpp  dcrtpoly-impl.cpp  dcrtpoly.cpp  dgsampling.cpp  elemparamfactory.cpp  elemparams.cpp  field2n.cpp  ildcrtparams.cpp  ilparams.cpp  matrix-lattice-impl.cpp  poly-impl.cpp  poly.cpp  stdlatticeparms.cpp  trapdoor-dcrtpoly-impl.cpp  trapdoor-poly-impl.cpp  trapdoor.cpp
src/core/lib/math/: be2-math-impl.cpp  be4-math-impl.cpp  be6-math-impl.cpp  benative-math-impl.cpp  binaryuniformgenerator.cpp  dftransfrm.cpp  discretegaussiangenerator.cpp  discretegaussiangeneratorgeneric.cpp  discreteuniformgenerator.cpp  distributiongenerator.cpp  matrix-impl.cpp  matrix.cpp  matrixstrassen.cpp  nbtheory.cpp  nbtheory2.cpp  ternaryuniformgenerator.cpp  transfrm.cpp
src/core/lib/math/bigintdyn/: mubintvecdyn.cpp  ubintdyn.cpp
src/core/lib/math/bigintfxd/: mubintvecfxd.cpp  ubintfxd.cpp
src/core/lib/math/bigintnat/: mubintvecnat.cpp  ubintnat.cpp
src/core/lib/math/bigintntl/: mubintvecntl.cpp  ubintntl.cpp
src/core/lib/utils/: debug.cpp  hashutil.cpp  palisadebase64.cpp  parallel.cpp  utilities.cpp
src/core/unittest/: UnitTest128.cpp  UnitTestBinInt.cpp  UnitTestBinVect.cpp  UnitTestBlockAllocate.cpp  UnitTestCommonElements.cpp  UnitTestDCRTElements.cpp  UnitTestDistrGen.cpp  UnitTestEncoding.cpp  UnitTestException.cpp  UnitTestField2n.cpp  UnitTestLatticeParams.cpp  UnitTestMatrix.cpp  UnitTestMubintvec.cpp  UnitTestNTT.cpp  UnitTestNbTheory.cpp  UnitTestPolyElements.cpp  UnitTestSTLBlockAllocate.cpp  UnitTestSerialize.cpp  UnitTestTransform.cpp  UnitTestTrapdoor.cpp  UnitTestUtils.cpp  UnitTestXallocate.cpp
src/pke/: CMakeLists.txt
src/pke/binfhe/: CMakeLists.txt
src/pke/binfhe/examples/: boolean-ap.cpp  boolean-serial-binary.cpp  boolean-serial-json.cpp  boolean-truth-tables.cpp  boolean.cpp
src/pke/binfhe/include/: binfhecontext-ser.h  binfhecontext.h  fhew.h  lwe.h  lwecore.h  ringcore.h
src/pke/binfhe/lib/: binfhecontext.cpp  fhew.cpp  lwe.cpp
src/pke/binfhe/unittest/: UnitTestFHEW.cpp  UnitTestFHEWDeep.cpp  UnitTestFHEWSerial.cpp
src/pke/examples/: README.md  advanced-real-numbers-128.cpp  advanced-real-numbers.cpp  depth-bfvrns-b.cpp  depth-bfvrns.cpp  depth-bgvrns.cpp  evalatindex.cpp  nn_multi_pke.cpp  pke.cpp  polynomial_evaluation.cpp  pre-buffer.cpp  pre-text.cpp  pre.cpp  simple-integers-bgvrns.cpp  simple-integers-serial-bgvrns.cpp  simple-integers-serial.cpp  simple-integers.cpp  simple-real-numbers-serial.cpp  simple-real-numbers.cpp  threshold-fhe.cpp
src/pke/extras/: bfvrns.cpp  demo-depth-bfvrns-b.cpp  demo-depth-bfvrns.cpp  run-bfvrns-b.cpp  run-bfvrns.cpp
src/pke/include/: ciphertext-ser.h  ciphertext.h  config.h  cryptocontext-ser.h  cryptocontext.h  cryptocontextgen.h  cryptocontexthelper.h  cryptocontextparametersets.h  hesea.h  metadata-ser.h  metadata.h  pubkeylp-ser.h  pubkeylp.h
src/pke/lib/: ciphertext-impl.cpp  cryptocontext-impl.cpp  cryptocontext.cpp  cryptocontextfactory.cpp  cryptocontexthelper-impl.cpp  cryptocontextparametersets-impl.cpp  pubkeylp-impl.cpp  pubkeylp.cpp
src/pke/unittest/: UnitTestAutomorphism.cpp  UnitTestBFVrnsCRTOperations.cpp  UnitTestBFVrnsDecrypt.cpp  UnitTestBGVrns.cpp  UnitTestBatching.cpp  UnitTestCKKS.cpp  UnitTestENCRYPT.cpp  UnitTestEvalInnerProduct.cpp  UnitTestEvalMult.cpp  UnitTestEvalMultMany.cpp  UnitTestEvalSum.cpp  (+11 more)
test/: Main_TestAll.cpp  README.md  benchmark_all_backends.sh
(+25 files in other folders)
